force-app/main/default/objects/Survey_Role__mdt/Survey_Role__mdt.object-meta.xml
<CustomObject>
    <label>Survey Role</label>
    <pluralLabel>Survey Roles</pluralLabel>
</CustomObject>