force-app/main/default/objects/Survey_Role__mdt/fields/Explicit__c.field-meta.xml
<CustomField>
    <fullName>Explicit__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Explicit</label>
    <type>Checkbox</type>
</CustomField>