force-app/main/default/objects/Survey_Role__mdt/fields/SurveyConfig__c.field-meta.xml
<CustomField>
    <fullName>SurveyConfig__c</fullName>
    <label>Survey Config</label>
    <referenceTo>SurveyConfig__mdt</referenceTo>
    <relationshipLabel>Survey Roles</relationshipLabel>
    <relationshipName>SurveyRoles</relationshipName>
    <type>MetadataRelationship</type>
</CustomField>